[RESTEASY-3264] Re-format all sources and resources.
Signed-off-by: James R. Perkins <jperkins@redhat.com>